@@ -5,12 +5,16 @@ python:
   - "3.4"
   
 services:
+  - postgresql
   - mysql
+  
+addons:
+  postgresql: "9.3"
 
 env:
-  - DB=sqlite DJANGO_SETTINGS_MODULE='dsmrreader.config.travis.test_sqlite'
-  - DB=mysql DJANGO_SETTINGS_MODULE='dsmrreader.config.travis.test_mysql'
-#  - DB=postgres
+  - DB=sqlite DJANGO_SETTINGS_MODULE='dsmrreader.config.travis.sqlite'
+  - DB=mysql DJANGO_SETTINGS_MODULE='dsmrreader.config.travis.mysql'
+  - DB=postgresql DJANGO_SETTINGS_MODULE='dsmrreader.config.travis.postgresql'
 
 before_install:
   - pip install codecov
@@ -18,12 +22,12 @@ before_install:
 install: 
   - pip install -r dsmrreader/provisioning/requirements/base.txt
   - pip install -r dsmrreader/provisioning/requirements/test.txt
-#  - pip install -r dsmrreader/provisioning/requirements/postgresql.txt
+  - pip install -r dsmrreader/provisioning/requirements/postgresql.txt
   - pip install -r dsmrreader/provisioning/requirements/mysql.txt
 
 before_script:
-#  - sh -c "if [ '$DB' = 'pgsql' ]; then dropdb -U postgres --if-exists dsmrreader; fi"
-#  - sh -c "if [ '$DB' = 'pgsql' ]; then createdb -U postgres dsmrreader; fi"
+  - sh -c "if [ '$DB' = 'postgresql' ]; then dropdb -U postgres --if-exists dsmrreader; fi"
+  - sh -c "if [ '$DB' = 'postgresql' ]; then createdb -U postgres dsmrreader; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'drop database IF EXISTS dsmrreader;' -u root; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysqladmin create dsmrreader; fi"
 
