@@ -3,4 +3,12 @@ from dsmrreader.config.test import *
 
 
 # Use for TESTING only: GRANT ALL PRIVILEGES ON test_dsmrreader.* TO 'dsmrreader'@'localhost';
-DATABASES['default']['ENGINE'] = 'django.db.backends.mysql'
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.mysql',
+        'NAME': 'dsmrreader',  # Will be adjusted to 'test_*' by Django.
+        'USER': 'dsmrreader',
+        'PASSWORD': 'dsmrreader',
+        'HOST': '127.0.0.1',
+    }
+}
