@@ -1,0 +1,1 @@
+from dsmrreader.config.test_sqlite import *
