@@ -1,4 +1,0 @@
-from dsmrreader.config.test import *
-
-
-DATABASES['default']['ENGINE'] = 'django.db.backends.sqlite3'
